--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,11 @@
 Package: cohetsurr
 Type: Package
 Title: Assessing Complex Heterogeneity in Surrogacy
-Version: 1.0
-Date: 2024-11-20
-Authors@R: c(person("Rebecca", "Knowlton", role = c("aut", "cre"), email = "rknowlton@utexas.edu"))
-Description: Provides functions to assess and test for complex heterogeneity in the utility of a surrogate marker with respect to multiple baseline covariates, using both a parametric model and a semiparametric two-step model. More details will be available in the future in: Knowlton, R., Tian, L., Parast, L. (2024) ``A General Framework to Assess Complex Heterogeneity in the Strength of a Surrogate Marker."
+Version: 1.1
+Date: 2025-03-05
+Authors@R: c(person("Rebecca", "Knowlton", email = "rknowlton@utexas.edu", role = c("aut")), person("Layla", "Parast", email = "parast@austin.utexas.edu", role = c("aut", "cre")))
+Description: Provides functions to assess and test for complex heterogeneity in the utility of a surrogate marker with respect to multiple baseline covariates, using both a parametric model and a semiparametric two-step model. More details are available in: Knowlton, R., Tian, L., & Parast, L. (2025). "A General Framework to Assess Complex Heterogeneity in the Strength of a Surrogate Marker," Statistics in Medicine, 44(5), e70001 <doi:10.1002/sim.70001>. A tutorial for this package can be found at <https://laylaparast.com/home/cohetsurr.html>.
 License: GPL
 Imports: stats, matrixStats, mvtnorm
 NeedsCompilation: no
-Packaged: 2024-11-20 18:08:26 UTC; rkkno
-Author: Rebecca Knowlton [aut, cre]
-Maintainer: Rebecca Knowlton <rknowlton@utexas.edu>
-Built: R 4.3.3; ; 2024-11-20 18:19:54 UTC; windows
+
