--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: cohetsurr
 Type: Package
 Title: Assessing Complex Heterogeneity in Surrogacy
-Version: 1.1
-Date: 2025-03-05
+Version: 2.0
+Date: 2025-04-09
 Authors@R: c(person("Rebecca", "Knowlton", email = "rknowlton@utexas.edu", role = c("aut")), person("Layla", "Parast", email = "parast@austin.utexas.edu", role = c("aut", "cre")))
-Description: Provides functions to assess and test for complex heterogeneity in the utility of a surrogate marker with respect to multiple baseline covariates, using both a parametric model and a semiparametric two-step model. More details are available in: Knowlton, R., Tian, L., & Parast, L. (2025). "A General Framework to Assess Complex Heterogeneity in the Strength of a Surrogate Marker," Statistics in Medicine, 44(5), e70001 <doi:10.1002/sim.70001>. A tutorial for this package can be found at <https://laylaparast.com/home/cohetsurr.html>.
+Description: Provides functions to assess and test for complex heterogeneity in the strength of a surrogate marker with respect to multiple baseline covariates, using both a parametric model and a semiparametric two-step model. More details are available in: Knowlton, R., Tian, L., & Parast, L. (2025). "A General Framework to Assess Complex Heterogeneity in the Strength of a Surrogate Marker," Statistics in Medicine, 44(5), e70001 <doi:10.1002/sim.70001>. Additionally, provides functions to assess complex heterogeneity in the strength of a surrogate marker in observational settings using meta-learners, with options for different base learners. More details will be available in the future in: Knowlton, R., Parast, L. (2025) "Assessing Surrogate Heterogeneity in Real World Data Using Meta-Learners." A tutorial for this package can be found at <https://www.laylaparast.com/cohetsurr>.
 License: GPL
-Imports: stats, matrixStats, mvtnorm
+Imports: stats, matrixStats, mvtnorm, mgcv, grf
 NeedsCompilation: no
 
